fixing date filter layout bugs and update buliding

--- a/fronend/src/assets/styles/stays/_booking.scss
+++ b/fronend/src/assets/styles/stays/_booking.scss
@@ -8,8 +8,10 @@
 // background-color: aqua;
         // width: max-content;
         position: absolute;
-        left:0;
-        top:100px;
+        left:28vw;
+        top:50vh;
+        // background-color: aqua;
+        z-index: 6;
         // right:0;
         
 
